tests/error/poly_errors/arg_mismatch4.err
Guppy compilation failed. Error in file $FILE:9

7:    @guppy(module)
8:    def main(x: array[int, bool]) -> None:
                  ^^^^^^^^^^^^^^^^
GuppyTypeError: Expected argument of type `nat`, got type
